--- a/public/signin.html
+++ b/public/signin.html
@@ -59,7 +59,7 @@
              </div>
              <button>Login</button>
              <p><a href="signup.html">Sign Up</a></p>
-             <p><a href="#">Forget Password?</a></p>
+             <p><a href="forgetPwd.html">Forget Password?</a></p>
         
         </div>
     </div>
