--- a/public/signin.html
+++ b/public/signin.html
@@ -45,7 +45,7 @@
               
                 <div class="divinput">
                     <label for="uname">UserName:</label>
-                    <input type="text" id="uname" placeholder="Name" name="uname">
+                    <input type="text" id="uname" placeholder="Name" name="uname" id="username">
                  </div>
                  <div class="divinput">
                     <label for="pwd">Password:</label>&nbsp;
@@ -58,5 +58,6 @@
             </div>
         </div>
       </form>
+      <script src="../script/validation.js"></script>
     </body>
 </html>
