--- a/public/mens.html
+++ b/public/mens.html
@@ -6,48 +6,47 @@
     <title>
         mens page
     </title>
-    <link rel="style sheet" href="../node_modules/bootstrap/dist/css/bootstrap.min.css">
-    <script src="../node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-   
-      <style>
-      .height{
-        height: 200px;
-      }
-      .main{
-        border: 1px solid black;
-        width: 300px;
-      }
-      .row{
-        display: flex;
-      }
-      </style>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+     <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.7.8/handlebars.min.js"></script> 
+     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+
+   <style>
+    
+    .main{
+      display: flex;
+      flex-wrap: wrap;
+      font-weight: bold;
+     
+    }
+    li{
+      list-style: none;
+    }
+    .card{
+      margin:5px ;
+    }
+   </style>
 </head>
-<body> 
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-4 col-md-3 col-sm-2 col-xm-1">
-                    <div class="card" style="width: 18rem;">
-                        <img src="assets/mens.webp" class="card-img-top height" alt="...">
-                        <div class="card-body">
-                          <h5 class="card-title">Card title</h5>
-                          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                          <a href="#" class="btn btn-primary">Go somewhere</a>
-                        </div>
-                      </div>
-
-                </div>
-                <div class="col-lg-4 col-md-3 col-sm-2 col-xm-1">
-                    <div class="card" style="width: 18rem;">
-                        <img src="assets/mens.webp" class="card-img-top height" alt="...">
-                        <div class="card-body">
-                          <h5 class="card-title">Card title</h5>
-                          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                          <a href="#" class="btn btn-primary">Go somewhere</a>
-                        </div>
-                      </div>
-
-                </div>
-            </div>
-        </div>
+<body>
+   
+  <div  class="main" >
+    <div  id="template"  style="display: none;" >
+      <div class="card   " style="width: 15rem;">
+        <img src="{{url}}" class="card-img-top" alt="...">
+        <div class="card-body">
+         <ul>
+          <li>
+            {{pname}}
+          </li>
+          <li>
+            {{price}}
+          </li>
+         </ul>
+      </div>
+      </div>
+     </div>
+  </div>
 </body>
+<script src="../script/product.js"> 
+</script>
 </html>
