--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,16 @@
     <body>
         <header><span class="heading">Ecommerce</span> <span class="login"><span ><a href="signin.html">Login</a></span><span><a href="signup.html">Signup</a></span></span></header>
         <main>
-
+            <aside>
+                <nav>
+                    <div>Men Wears</div>
+                    <div>Men Wears</div>
+                    <div>Men Wears</div>
+                    <div>Men Wears</div>
+                    <div>Men Wears</div>
+                    <div>Men Wears</div>
+                </nav>
+            </aside>
         </main>
         <footer>
             <section>
