--- a/public/index.html
+++ b/public/index.html
@@ -9,14 +9,18 @@
         <main>
             <aside>
                 <nav>
-                    <div>Men Wears</div>
-                    <div>Men Wears</div>
-                    <div>Men Wears</div>
-                    <div>Men Wears</div>
-                    <div>Men Wears</div>
-                    <div>Men Wears</div>
+                    <a href="mens.html" class="text-dec" target="frame" onclick="click()" class="mw"><div id="mw">Men Wears</div></a>
+                    
+                    <div >Women Wears</div>
+                    <div>Electrons </div>
+                    <div>Kids Wears</div>
+                    <div>Shoe </div>
+                    <div>Watch</div>
                 </nav>
             </aside>
+            <iframe name="frame" frameborder="0" width="100%" height="100%">
+
+            </iframe>
         </main>
         <footer>
             <section>
@@ -25,6 +29,7 @@
             <section></section>
             <section></section>
         </footer>
+        <script src="../script/product.js"></script>
     </body>
 
 </html>
